--- a/.kokoro/continuous.cfg
+++ b/.kokoro/continuous.cfg
@@ -5,7 +5,7 @@
 build_file: "generator/.kokoro/update-dotnet.sh"
 
 container_properties {
-    docker_image: "ubuntu2004-go"
+    docker_image: "us-central1-docker.pkg.dev/kokoro-container-bakery/kokoro/ubuntu/ubuntu2004/go:current"
 }
 
 env_vars: {
