feat: support sibling containers and reduce CI noise (#66)
* sibling containers enabled in container properties
* CI env variable determines whether git clone progress is shown

--- a/.kokoro/continuous.cfg
+++ b/.kokoro/continuous.cfg
@@ -6,9 +6,10 @@ build_file: "generator/.kokoro/update-dotnet.sh"
 
 container_properties {
     docker_image: "us-central1-docker.pkg.dev/kokoro-container-bakery/kokoro/ubuntu/ubuntu2204/full:current"
+    docker_sibling_containers: true
 }
 
 env_vars: {
   key: "GENERATOR_CLI_REPOSITORY"
-  value: "us-central1-docker.pkg.dev/cloud-sdk-production-pipeline/pipeline-images/google-cloud-dotnet-generator"
+  value: "us-central1-docker.pkg.dev/cloud-sdk-production-pipeline/pipeline-images"
 }
