--- a/.kokoro/continuous.cfg
+++ b/.kokoro/continuous.cfg
@@ -2,7 +2,7 @@
 # proto-file: google3/devtools/kokoro/config/proto/build.proto
 # proto-message: BuildConfig
 
-build_file: "generator/.kokoro/update-dotnet.sh"
+build_file: "librarian/.kokoro/update-dotnet.sh"
 
 container_properties {
     docker_image: "us-central1-docker.pkg.dev/kokoro-container-bakery/kokoro/ubuntu/ubuntu2204/full:current"
