--- a/.kokoro/presubmit.cfg
+++ b/.kokoro/presubmit.cfg
@@ -10,6 +10,6 @@ container_properties {
 }
 
 env_vars: {
-  key: "GENERATOR_CLI_REPOSITORY"
+  key: "LIBRARIAN_REPOSITORY"
   value: "us-central1-docker.pkg.dev/cloud-sdk-production-pipeline/pipeline-images"
 }
