--- a/.kokoro/continuous.cfg
+++ b/.kokoro/continuous.cfg
@@ -3,6 +3,7 @@
 # proto-message: BuildConfig
 
 build_file: "librarian/.kokoro/update-dotnet.sh"
+timeout_mins: 360
 
 container_properties {
     docker_image: "us-central1-docker.pkg.dev/kokoro-container-bakery/kokoro/ubuntu/ubuntu2204/full:current"
