chore(lint): enabled containedctx linter and fixed errors (#664)
Fixes #646

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -20,6 +20,7 @@ linters:
   # See https://golangci-lint.run/usage/linters for details.
   default: none
   enable:
+    - containedctx
     - fatcontext
     - govet
     - ineffassign
