chore(all): turn on misspell (#698)
misspell finds commonly misspelled English words.

For https://github.com/googleapis/librarian/issues/638

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -21,10 +21,11 @@ linters:
   default: none
   enable:
     - containedctx
+    - contextcheck
     - fatcontext
     - govet
     - ineffassign
+    - misspell
     - staticcheck
     - unparam
     - unused
-    - contextcheck
