chore: explicitly set coverage flags in CI (#798)

--- a/.github/workflows/librarian.yaml
+++ b/.github/workflows/librarian.yaml
@@ -27,7 +27,7 @@ jobs:
     - name: Display Go version
       run: go version
     - name: Run tests
-      run: go test ./...
+      run: go test -race -coverprofile=coverage.out -covermode=atomic ./...
     - run: go fmt ./...
     - name: Detect Changes
       run: git diff --exit-code
