feat: Add a yaml format check in librarian.yaml test step (#1505)
Add a yaml format check in librarian.yaml test step.

If any yaml file is not in good format, the `Detect formatting changes`
will failed, indicating which yaml file needs change.

To fix, run `yamlfmt .` in the librarian root dir. 

fix: https://github.com/googleapis/librarian/issues/1502

--- a/.github/workflows/librarian.yaml
+++ b/.github/workflows/librarian.yaml
@@ -27,8 +27,13 @@ jobs:
         run: go version
       - name: Run tests
         run: go test -race -coverprofile=coverage.out -covermode=atomic ./...
-      - run: go fmt ./...
-      - name: Detect Changes
+      - name: Check Go formatting
+        run: go fmt ./...
+      - name: Check YAML formatting
+        run: |
+          go install github.com/google/yamlfmt/cmd/yamlfmt@v0.17.2
+          yamlfmt .
+      - name: Detect formatting changes
         run: git diff --exit-code
       - name: Upload coverage report
         uses: codecov/codecov-action@v5
