--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -29,3 +29,9 @@ linters:
     - unparam
     - unused
     - usetesting
+
+  # TODO(https://github.com/googleapis/librarian/issues/1510): fix tests and
+  # remove
+  exclusions:
+    paths:
+      - internal/sidekick
