refactor: rename source_oaths to source_roots (#1531)
Fixes: #1513

--- a/testdata/e2e/generate/repo_backup/.librarian/state.yaml
+++ b/testdata/e2e/generate/repo_backup/.librarian/state.yaml
@@ -5,5 +5,5 @@ libraries:
     last_generated_commit:
     apis:
       - path: google/cloud/pubsub/v1
-    source_paths:
+    source_roots:
       - google-cloud-pubsub/v1
