fix(internal/sidekick): merge into single Go module (#1533)
Remove the go.mod file from internal/sidekick, merging sidekick and
librarian into a single Go module.

Add a requireProtoc helper to skip tests when protoc is not installed,
ensuring go test ./... passes on a fresh clone without requiring protoc.

Install protoc as part of the workflow in
https://github.com/googleapis/librarian/blob/main/.github/workflows/librarian.yaml,
so that all tests run in CI.

Codecov is temporarily disabled for internal/sidekick because
internal/sidekick reduced code coverage from 82% to 65%, which is our
below baseline of 80%. This will be fixed in follow up PRs.

For https://github.com/googleapis/librarian/issues/1510
For https://github.com/googleapis/librarian/issues/1543
Fixes https://github.com/googleapis/librarian/issues/1538
Fixes https://github.com/googleapis/librarian/issues/1535

--- a/codecov.yml
+++ b/codecov.yml
@@ -11,7 +11,6 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-# TODO(https://github.com/googleapis/librarian/issues/744): restore target to 90%
 coverage:
   status:
     project:
@@ -19,3 +18,6 @@ coverage:
         target: 80% # The target coverage percentage for the project
         threshold: 0% # Allow 0% drop from the target; any drop below target will fail
         if_ci_failed: error # Set the CI status to 'error' if coverage conditions are not met
+# TODO(https://github.com/googleapis/librarian/issues/1543): restore to 80%
+ignore:
+  - internal/sidekick
