--- a/.github/workflows/librarian.yaml
+++ b/.github/workflows/librarian.yaml
@@ -25,6 +25,13 @@ jobs:
           go-version-file: 'go.mod'
       - name: Display Go version
         run: go version
+      - name: Install protoc
+        run: |
+          set -e
+          curl -fSSL -o /tmp/protoc.zip https://github.com/protocolbuffers/protobuf/releases/download/v28.3/protoc-28.3-linux-x86_64.zip
+          cd /usr/local
+          sudo unzip -x /tmp/protoc.zip
+          protoc --version
       - name: Run tests
         run: go test -race -coverprofile=coverage.out -covermode=atomic ./...
       - name: Check Go formatting
