fix(codeowners): add cloud-sdk-sidekick-team (#1561)
Fixes https://github.com/googleapis/librarian/issues/1560

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,3 +4,6 @@
 
 # The owners for all files in the repo.
 * @googleapis/cloud-sdk-librarian-team
+
+/cmd/sidekick/ @googleapis/cloud-sdk-sidekick-team
+/internal/sidekick/ @googleapis/cloud-sdk-sidekick-team
