--- a/testdata/e2e/generate/repo_init/.librarian/state.yaml
+++ b/testdata/e2e/generate/repo_init/.librarian/state.yaml
@@ -5,5 +5,5 @@ libraries:
     last_generated_commit:
     apis:
       - path: google/cloud/pubsub/v1
-    source_roots:
+    source_paths:
       - google-cloud-pubsub/v1
