--- a/infra/test/token-access-test.yaml
+++ b/infra/test/token-access-test.yaml
@@ -26,7 +26,8 @@ steps:
       # "-o pipefail" stops execution of the piped command fails, especially
       # the body of the while loop in this case.
       set -eo pipefail
-      echo "Your project ID is $PROJECT_ID"
+      echo "gcloud config get-value project:"
+      gcloud config get-value project
       echo "gcloud config get-value core/account:"
       gcloud config get-value core/account
       echo "pwd is $(pwd)"
