ci: update repository.yaml path in token validation test
The file path was updated in https://github.com/googleapis/librarian/pull/1687

--- a/infra/test/token-access-test.yaml
+++ b/infra/test/token-access-test.yaml
@@ -38,7 +38,7 @@ steps:
         echo "xtrace is ON. Exiting to avoid credentials showing up in logs."
         exit 1
       fi
-      sed -n 's/.* - name: \"\(.*\)".*/\1/p' infra/prod/repositories.yaml | while read -r repo_name; do
+      sed -n 's/.* - name: \"\(.*\)".*/\1/p' internal/automation/prod/repositories.yaml | while read -r repo_name; do
         echo "Validating credentials for repository: ${repo_name}"
         GITHUB_TOKEN=$(gcloud secrets versions access latest --secret="${repo_name}-github-token")
         if [[ -z "${GITHUB_TOKEN}" ]]; then
