ci: use '-branch' option in Cloud Builds
The branch option helps us to test the Librarian's generate and
stage-release behavior without touching the main branch of the SDK
repository.

The flag has been added in https://github.com/googleapis/librarian/pull/1893.
Let's use the flag in the Cloud Builds YAML files.
By default, "main" is passed to the variable (cl/802643045).

--- a/infra/prod/generate.yaml
+++ b/infra/prod/generate.yaml
@@ -54,6 +54,7 @@ steps:
       - 'generate'
       - '-repo'
       - '/workspace/$_REPOSITORY'
+      - '-branch=$_BRANCH'
       - '-library'
       - $_LIBRARY_ID
       - '-api-source'
