--- a/infra/prod/stage-release.yaml
+++ b/infra/prod/stage-release.yaml
@@ -48,6 +48,7 @@ steps:
       - 'init'
       - '-repo'
       - '/workspace/$_REPOSITORY'
+      - '-branch=$_BRANCH'
       - '-library'
       - $_LIBRARY_ID
       - '-output'
